--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "deploy": "npm run bundle && blocklet deploy .blocklet/bundle",
     "upload": "npm run bundle && blocklet upload .blocklet/release/blocklet.json",
     "prepare": "husky install",
-    "bump-version": "zx scripts/bump-version.mjs"
+    "bump-version": "zx scripts/bump-version.mjs",
+    "test:dev": "NODE_ENV=development jest",
+    "test": "jest"
   },
   "lint-staged": {
     "*.{mjs,js,ts}": [
@@ -34,6 +36,7 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
+    "node-cache": "^5.1.2",
     "superagent": "^8.0.3",
     "superagent-proxy": "^3.0.0",
     "validate.js": "^0.13.1"
@@ -43,10 +46,12 @@
     "bumpp": "^8.2.1",
     "eslint": "^8.25.0",
     "husky": "^8.0.1",
+    "jest": "^29.2.2",
     "lint-staged": "^12.5.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "supertest": "^6.3.1",
     "zx": "^7.1.1"
   }
 }
